# DUNEprotoTKI

./: .gitignore  .gitmodules  .rootlogon.C  CMakeLists.txt  LICENSE  README.md  bin  setup.sh  style
anaData/: AnaCut.h  AnaFunctions.h  AnaIO.h  AnaUtils.h  CMakeLists.txt  TreeIO.h  anaData.cxx  do.sh
anaData/input/: protoDUNE_data_reco_flattree.root  protoDUNE_mc_reco_flattree.root  protoDUNE_reco_flattree.root
doc/: beamana.C  beamana_data.C  beamana_data.h  beamana_mc.C  beamana_mc.h
doc/data_structure_v0/: beamana.h
drawTKI/: do.sh  drawTKI.C
drawTracking/: do.sh  drawTracking.C
style/: CMakeLists.txt  do.sh  style.cxx  style.h  styleLinkDef.h
